# CareerBuddy

./: .gitignore  ADMIN_PRIVILEGES.md  API_DOCUMENTATION.md  AUDIT_CHANGES_SUMMARY.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  AUTHORS.md  CHANGES_APPLIED.md  CODEBASE_AUDIT_2026.md  CODEBASE_AUDIT_REPORT.md  CONTRIBUTING.md  CV_LAYOUT_VISUAL_REFERENCE.md  CV_QUICK_START_GUIDE.md  CV_TEMPLATE_DOCUMENTATION.md  CV_TEMPLATE_IMPLEMENTATION_SUMMARY.md  CV_TEMPLATE_README.md  DELIVERABLES_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  FEATURES.md  GITHUB_DESCRIPTION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LINKEDIN_POST.md  LINKEDIN_POST_CASUAL.md  LINKEDIN_POST_FINAL.md  LINKEDIN_POST_OPENSOURCE.md  LINKEDIN_POST_TRIMMED.md  NEW_FEATURES.md  PAYMENT_AND_REVAMP_IMPLEMENTATION.md  PAYMENT_GATEWAY_EXPLAINED.md  PAYMENT_SYSTEM_IMPLEMENTATION.md  PHASE_2_AI_INTEGRATION_COMPLETE.md  PRODUCTION_AUDIT_REPORT.md  PROJECT_OVERVIEW.md  README.md  RUNBOOK.md  TASK_1_COMPLETE.md  TELEGRAM_SETUP_GUIDE.md  TESTING_IMPLEMENTATION_SUMMARY.md  (+13 more)
backend/: .dockerignore  .env.example  Dockerfile  TESTING_GUIDE.md  TEST_STRATEGY.md  alembic.ini  pyproject.toml  pytest.ini  railway.toml  test_complete_flow.py  test_cv_generation.py
backend/app/: .dockerignore  celery_app.py  config.py  db.py  main.py  tasks.py  utils.py
backend/migrations/: 001_add_premium_tracking.sql  add_premium_tracking.py  env.py  script.py.mako
backend/scripts/: backup_database.py
backend/tests/: conftest.py  test_api_webhook.py  test_error_recovery.py  test_integration.py  test_models.py  test_router.py  (+5 more)
(+79 files in other folders)
